--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>The 29 Game</title>
+	<title>TeamMate</title>
 	<link rel="icon" href="./favicon.png">
 	<meta name="viewport" content="user-scalable=no">
 	<meta name="theme-color" content="#1b4b7c">
