--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>TeamMate</title>
+	<title>TwentyNine</title>
 	<link rel="icon" href="./favicon.png">
 	<meta name="viewport" content="user-scalable=no">
 	<meta name="theme-color" content="#1b4b7c">
-	<meta name="description" content="The classic card game 29, now in your browser!">
+	<meta name="description" content="The classic card game twenty nine , now in your browser!">
 	
-	<meta property="og:title" content="The 29 Game">
+	<meta property="og:title" content="TwentyNine">
 	<meta property="og:image" content="./favicon.png">
 	<meta property="og:description" content="The classic card game 29, now in your browser!">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
