--- a/public/index.html
+++ b/public/index.html
@@ -353,7 +353,7 @@
 				<div class="overlay-text">
 					<span class="m29-home">29</span>
 					<span>The Card Game</span>
-					<span>&copy; Arindam Ray, 2020</span>
+					<span></span>
 				</div>
 			</div>
 			<div class="layer2 flexcenter">
