--- a/public/index.html
+++ b/public/index.html
@@ -108,13 +108,13 @@
 							<h5 class="truncate">-</h5>
 						</div>
 						<div class="col s5">
-							<h6 style="letter-spacing:-.4px;">
+							<h6 style="letter-spacing:-.6px;">
 								<div id="toptrump" class="isb trumpshow red-text labelstat">T&nbsp;</div>
-								<div class="isb labelstat">R:</div>
+								<div class="isb labelstat">Round:</div>
 								<div id="topround" class="isb round">-</div>
-								<div class="isb labelstat">&nbsp;P:</div>
+								<div class="isb labelstat">&nbsp;Points:</div>
 								<div id="toppoint" class="isb score">-</div>
-								<div class="isb labelstat">&nbsp;B:</div>
+								<div class="isb labelstat">&nbsp;Trump:</div>
 								<div id="topbid" class="isb trump">-</div>
 							</h6>
 						</div>
