--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,7 @@
 							<h5 class="truncate">-</h5>
 						</div>
 						<div class="col s5">
-							<h6 style="letter-spacing:-.6px;">
+							<h6 style="letter-spacing:-.4px;">
 								<div id="toptrump" class="isb trumpshow red-text labelstat">T&nbsp;</div>
 								<div class="isb labelstat">Round:</div>
 								<div id="topround" class="isb round">-</div>
@@ -143,11 +143,11 @@
 						<div class="col s5">
 							<h6 style="letter-spacing:-.4px;">
 								<div id="lefttrump" class="isb trumpshow red-text labelstat">T&nbsp;</div>
-								<div class="isb labelstat">R:</div>
+								<div class="isb labelstat">Round:</div>
 								<div id="leftround" class="isb round">-</div>
-								<div class="isb labelstat">&nbsp;P:</div>
+								<div class="isb labelstat">&nbsp;Points:</div>
 								<div id="leftpoint" class="isb score">-</div>
-								<div class="isb labelstat">&nbsp;B:</div>
+								<div class="isb labelstat">&nbsp;Trump:</div>
 								<div id="leftbid" class="isb trump">-</div>
 							</h6>
 						</div>
@@ -190,11 +190,11 @@
 						<div class="col s5">
 							<h6 style="letter-spacing:-.4px;">
 								<div id="righttrump" class="isb trumpshow red-text labelstat">T&nbsp;</div>
-								<div class="isb labelstat">R:</div>
+								<div class="isb labelstat">Round:</div>
 								<div id="rightround" class="isb round">-</div>
-								<div class="isb labelstat">&nbsp;P:</div>
+								<div class="isb labelstat">&nbsp;Points:</div>
 								<div id="rightpoint" class="isb score">-</div>
-								<div class="isb labelstat">&nbsp;B:</div>
+								<div class="isb labelstat">&nbsp;Trump:</div>
 								<div id="rightbid" class="isb trump">-</div>
 							</h6>
 						</div>
@@ -231,13 +231,13 @@
 									style="box-shadow:none;justify-content:center;width:100%;margin-left:8px;"
 									disabled><i class="material-icons">arrow_upward</i><span>&nbsp;&nbsp;PLAY</span></a>
 							</div>
-							<h6 style="letter-spacing:-.5px;">
+							<h6 style="letter-spacing:-.4px;">
 								<div id="bottomtrump" class="isb trumpshow red-text labelstat">T&nbsp;</div>
-								<div class="isb labelstat">R:</div>
+								<div class="isb labelstat">Round:</div>
 								<div id="bottomround" class="isb round">-</div>
-								<div class="isb labelstat">&nbsp;P:</div>
+								<div class="isb labelstat">&nbsp;Points:</div>
 								<div id="bottompoint" class="isb score">-</div>
-								<div class="isb labelstat">&nbsp;B:</div>
+								<div class="isb labelstat">&nbsp;Trump:</div>
 								<div id="bottombid" class="isb trump">-</div>
 							</h6>
 						</div>
