--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     
     <div>
         <h3>
-            <a href="release/twentynine.apk" download="">download game</a>
+            <a href="release/twentynine.apk" download="">download for android</a>
         </h3>
     </div>
 
