--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,15 @@
             <a href="release/twentynine.apk" download="">download for android</a>
         </h3>
     </div>
+    <div>
 
-    
+    </div>
+<div>
+
+</div>
+    <div>
+        <h4>the app is in the development stage . please have patience if u experience any bug in gameplay .</h4>
+        <h4>enjoy ur rivalry </h4>
+    </div>
 </body>
 </html>
