--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,22 @@
             <a href="index2.html">play</a>
         </h1>
     </div>
+    <div>
+        <h3>
+            Download apk for android
+        </h3>
+    </div>
     
     <div>
         <h3>
-            <a href="release/twentynine.apk" download="">download for android</a>
+            <a href="release/twentynine(build1).apk" download>Build 1</a>
         </h3>
     </div>
     <div>
-
+        <h3>
+            <a href="release/twentynine(build2).apk" download>Build 2</a>
+        </h3>
+     
     </div>
 <div>
 
