--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <h1>
-            <a href="index2.html">play</a>
+            <a href="gameplay.html">play</a>
         </h1>
     </div>
     <div>
