--- a/public/gameplay.html
+++ b/public/gameplay.html
@@ -13,6 +13,27 @@
 	<meta property="og:image" content="./favicon.png">
 	<meta property="og:description" content="The classic card game 29, now in your browser!">
 	
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab&family=Bungee+Inline&family=Bungee&family=Bungee+Outline&display=swap"
+		rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"  media="screen,projection">
+	<!--<link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />-->
+	<link type="text/css" rel="stylesheet" href="css/style.css" media="screen,projection">
+	<script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<!-- <script defer type="text/javascript" src="js/jquery-3.4.1.min.js"></script> -->
+	<script defer src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	<!-- <script defer type="text/javascript" src="js/materialize.min.js"></script> -->
+	<script defer src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+	<!-- <script defer type="text/javascript" src="js/socket.io.js"></script> -->
+	<script defer type="text/javascript" src="js/script.js"></script>
+	<!-- start VoiceServer -->
+	<script defer src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.1/peerjs.min.js"></script>
+	<!-- <script defer type="text/javascript" src="js/peerjs.min.js"></script> -->
+	<script defer type="text/javascript" src="js/voiceserver.js"></script>
+	<!-- end VoiceServer -->
+	<link href="img/back.jpg" rel="preload" as="image">
+
 </head>
 
 <body>
