--- a/public/gameplay.html
+++ b/public/gameplay.html
@@ -283,12 +283,12 @@
 		</div>
 		<span></span>
 	</div>
-	<!-- LeaderBoard -->
+	<!-- LeaderBoard 
 	<div id="leaderopen">
 		<a class="btn-floating btn-large orange darken-4 waves-effect waves-light" href="#">
 			<i class="large material-icons">star</i>
 		</a>
-	</div>
+	</div> -->
 
 	<!-- Modals -->
 	<div id="modal-roomlist" class="modal modal-fixed-footer">
@@ -371,12 +371,12 @@
 			<div class="row" style="border:1px solid #9e9e9e;border-radius:2px;padding:12px 0;">
 				<div class="col s4 offset-s1">
 					<div class="card tsCard" id="optgreen">
-						<div class="row flexcenter" style="border-radius:2px;background:#3fa46b">
+						<div class="row flexcenter" style="border-radius:2px;background:#5211e9">
 							<div class="col s4 flexcenter">
-								<img src="img/green.png" alt="">
+								<img src="img/blue.png" alt="">
 							</div>
 							<div class="col s6">
-								<span class="card-title white-text">Team Green</span>
+								<span class="card-title white-text">Team Blue</span>
 							</div>
 							<div class="col s2">
 								<label>
@@ -395,12 +395,12 @@
 				</div>
 				<div class="col s4 offset-s2">
 					<div class="card tsCard" id="optpurple">
-						<div class="row flexcenter" style="border-radius:2px;background:#4d2c8d">
+						<div class="row flexcenter" style="border-radius:2px;background:#bfec1c">
 							<div class="col s4 flexcenter">
-								<img src="img/purple.png" alt="">
+								<img src="img/yellow.png" alt="">
 							</div>
 							<div class="col s6">
-								<span class="card-title white-text">Team Purple</span>
+								<span class="card-title white-text">Team Yellow</span>
 							</div>
 							<div class="col s2">
 								<label>
@@ -576,7 +576,7 @@
 		</div>
 	</div>
 
-	<div id="modal-credits" class="modal modal-fixed-footer">
+	<!--<div id="modal-credits" class="modal modal-fixed-footer">
 		<div class="modal-content" style="background-color:#1B1C20">
 			<div class="m29-home about29">29</div>
 			<hr>
@@ -597,7 +597,7 @@
 			<a href="#" id="closeCredits" class="waves-effect waves-green btn-flat flexcenter"
 				style="justify-content:center;"><i class="material-icons">close</i> CLOSE</a>
 		</div>
-	</div>
+	</div>-->
 
 	<div id="modal-chat" class="modal modal-fixed-footer">
 		<div class="modal-content">
@@ -632,7 +632,7 @@
 		</div>
 	</div>
 
-	<div id="modal-share" class="modal">
+	<!--<div id="modal-share" class="modal">
 		<div class="modal-content">
 			<h3 class="m29 msize">Share</h3>
 			<h5 id="share-data" style="user-select:all;line-height:2.6rem"></h5>
@@ -688,7 +688,7 @@
 			<a href="#" id="closeShare" class="waves-effect waves-green btn-flat flexcenter"
 				style="justify-content:center;"><i class="material-icons">close</i> CLOSE</a>
 		</div>
-	</div>
+	</div> -->
 
 	<script type="text/javascript" class="pload">
 		var values = ['J', '9', 'A', '10', 'K', 'Q', '8', '7'];
