--- a/public/index.html
+++ b/public/index.html
@@ -7,38 +7,42 @@
     <title>CardMate</title>
 </head>
 <body>
-    <div>
+    <div class="center">
         <h1>
             <a href="gameplay.html">Play Game </a>
         </h1>
     </div>
-    <div>
+    <div class="center">
         <h3>
             Download apk for android
         </h3>
     </div>
     
-    <div>
+    <div class="center">
         <h3>
             <a href="release/twentynine(build1).apk" download>Build 1</a>
         </h3>
     </div>
-    <div>
+    <div class="center">
         <h3>
             <a href="release/twentynine(build2).apk" download>Build 2</a>
         </h3>
      
     </div>
-<div>
+<div class="center">
 
 </div>
-    <div>
+    <div class="center">
         <h4>the app is in the development stage . please have patience if u experience any bug in gameplay .</h4>
         <h4>enjoy ur rivalry </h4>
     </div>
 
 
-
+<style>
+    .center{
+        text-align: center;
+    }
+</style>
 
 
 
